fix: security fixes

--- a/src/config/env.example
+++ b/src/config/env.example
@@ -1,10 +1,12 @@
 NODE_PATH=src
 SESSION_SECRET=topsecret
 NOT_ASSIGNED_ROLE_ID=4
-ADMIN_COACH_PATHS=/users/role,/users/role/edit,/users/user_info,/videos/add,/videos/edit,/announcements/team,/announcements/add,/announcements/edit,/team/all,/team/coach,/team/assign,/team/unassign,/team/add,/team/edit,/exercises/add,/exercises/coach,/exercises/edit,/trainings/past/tests,/trainings/coach,/trainings/add,/scores/coach,/scores/edit
+DB_CONNECTION_STRING=postgres://postgres:9095582@localhost:5432/postgres
+ADMIN_PATHS=/users/role
 #    // users
-#    "/users/role",
-#    "/users/role/edit",
+#    "/users/role"
+ADMIN_COACH_PATHS=/users/user_info,/videos/add,/videos/edit,/announcements/team,/announcements/add,/announcements/edit,/team/all,/team/coach,/team/assign,/team/unassign,/team/add,/team/edit,/exercises/add,/exercises/coach,/exercises/edit,/trainings/past/tests,/trainings/coach,/trainings/add,/scores/coach,/scores/edit
+#    // users
 #    "/users/user_info",
 #    // videos
 #    "/videos/add",
